feat: add script to generate 16x16 grid

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+
+    <div id="grid-container"></div>
+
+    <script src="./script.js" defer></script>
 </body>
 </html>
