--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Etch-a-Sketch | The Odin Project</title>
     <link rel="stylesheet" href="./styles.css">
     <!-- Import Fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+
+    <div id="grid-container"></div>
+
+    <script src="./script.js" defer></script>
 </body>
 </html>
